k8s/prowlarr/0-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prowlarr
  labels:
    name: prowlarr
