k8s/prowlarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr:2.5.2.5491-ls155
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 9696
          volumeMounts:
            - mountPath: /config
              name: prowlarr
      volumes:
        - name: prowlarr
          hostPath:
            path: /opt/prowlarr/config
