k8s/prowlarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app: prowlarr
    kubernetes.io/name: "prowlarr"
spec:
  type: NodePort
  ports:
    - name: prowlarr
      port: 9696
      targetPort: 9696
      nodePort: 30011
  selector:
    app: prowlarr
